doc/ug: ppp, interfaces: wip

--- a/doc/src/developers-guide/ch-ppp.tex
+++ b/doc/src/developers-guide/ch-ppp.tex
@@ -21,6 +21,14 @@ TODO tags PPP attaches to packets; example code
 
 TODO how (override handleMessage etc.)
 
+signals:
+
+Notifications are sent when
+transmission of a new PPP frame started (\verb!NF_PP_TX_BEGIN!), finished
+(\verb!NF_PP_TX_END!) or when a PPP frame received (\verb!NF_PP_RX_END!).
+
+
+
 %%% Local Variables:
 %%% mode: latex
 %%% TeX-master: "usman"
