doc/ug: added missing topics

--- a/doc/src/users-guide/ch-ethernet.tex
+++ b/doc/src/users-guide/ch-ethernet.tex
@@ -2,6 +2,8 @@
 \chapter{The Ethernet Model}
 \label{cha:ethernet}
 
+TODO: 802.1d (STP, RSTP), 802.2 (LLC), ...
+
 % TODO: comment numWirelessPorts in MacRelayUnitPP
 % TODO: comment origByteLength in EtherFrame
 % FIXME: wrong header length in EtherFrame.msg
