--- a/doc/src/users-guide/ch-network-interfaces.tex
+++ b/doc/src/users-guide/ch-network-interfaces.tex
@@ -65,6 +65,8 @@ Typical ingredients are:
     \item \emph{Hooks}
 \end{itemize}
 
+TODO InterfaceTable
+
 \section{Queueing}
 
 TODO internal/external queue
@@ -106,6 +108,10 @@ and updates the entry in the interface table.
 \section{Wired Network Interfaces}
 
 %TODO: explain what is specific to wired interfaces
+
+TODO PPP, EthernetInterface
+
+TODO MAC: Acking, CsmaCa, Shortcut 
 
 \section{Wireless Network Interfaces}
 
