--- a/doc/src/users-guide/ch-transport.tex
+++ b/doc/src/users-guide/ch-transport.tex
@@ -924,6 +924,10 @@ can use several sockets to send and receive UDP datagrams.
 
 TODO
 
+\section{RTP}
+\label{sec:rtp}
+
+TODO
 
 
 %%% Local Variables:
