--- a/doc/src/users-guide/inet-users-guide.tex
+++ b/doc/src/users-guide/inet-users-guide.tex
@@ -439,6 +439,9 @@
 \include{ch-ipv6}
 \cleardoublepage
 
+\include{ch-other-network-protocols}
+\cleardoublepage
+
 \include{ch-routing}
 \cleardoublepage
 
